Generics_Super_WildCard/Code4_error_report.txt
javac errors for Code4.java 
Code4.java:13: error: method addToList in class Code4 cannot be applied to given types;
        addToList(stuff, "New Element"); 
        ^
  required: Collection<? super T>,T
  found: List<CAP#1>,String
  reason: cannot infer type-variable(s) T
    (argument mismatch; List<CAP#1> cannot be converted to Collection<? super T>)
  where T is a type-variable:
    T extends Object declared in method <T>addToList(Collection<? super T>,T)
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Object from capture of ?
1 error
 
============================================================================= 
ExtendJ errors for Code4.java 
Code4: void main(String[] args)
Error while processing C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Super_WildCard\Code4.java:7
Error while processing C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Super_WildCard\Code4.java:7
Fatal exception:
java.lang.Error: Trying to cast to Unknown
	at org.extendj.ast.ReferenceType.intToThis(ReferenceType.java:130)
	at org.extendj.ast.IntType.emitCastTo(IntType.java:61)
	at org.extendj.ast.TypeDecl.emitAssignConvTo(TypeDecl.java:1115)
	at org.extendj.ast.Expr.emitAssignConvTo(Expr.java:396)
	at org.extendj.ast.ArrayInit.createBCode(ArrayInit.java:317)
	at org.extendj.ast.ArrayCreationExpr.createBCode(ArrayCreationExpr.java:269)
	at org.extendj.ast.MethodAccess.createBCode(MethodAccess.java:570)
	at org.extendj.ast.MethodAccess.createBCode(MethodAccess.java:558)
	at org.extendj.ast.Dot.createBCode(Dot.java:152)
	at org.extendj.ast.Declarator.emitInitializerBCode(Declarator.java:137)
	at org.extendj.ast.VariableDeclarator.createBCode(VariableDeclarator.java:47)
	at org.extendj.ast.VarDeclStmt.createBCode(VarDeclStmt.java:63)
	at org.extendj.ast.Block.createBCode(Block.java:66)
	at org.extendj.ast.MethodDecl.createBCode(MethodDecl.java:237)
	at org.extendj.ast.MethodDecl.generateBytecodes(MethodDecl.java:223)
	at org.extendj.ast.MethodDecl.bytecodes_compute(MethodDecl.java:2134)
	at org.extendj.ast.MethodDecl.bytecodes(MethodDecl.java:2118)
	at org.extendj.ast.MethodDecl.refined_Attributes_MethodDecl_attributes(MethodDecl.java:1047)
	at org.extendj.ast.MethodDecl.refined_AnnotationsCodegen_MethodDecl_attributes(MethodDecl.java:1130)
	at org.extendj.ast.MethodDecl.attributes_compute(MethodDecl.java:2037)
	at org.extendj.ast.MethodDecl.attributes(MethodDecl.java:2025)
	at org.extendj.ast.MethodDecl.touchMethod(MethodDecl.java:264)
	at org.extendj.ast.ClassDecl.generateClassfile(ClassDecl.java:188)
	at org.extendj.ast.CompilationUnit.generateClassfile(CompilationUnit.java:135)
	at org.extendj.JavaCompiler.processNoErrors(JavaCompiler.java:143)
	at org.extendj.ast.Frontend.run(Frontend.java:203)
	at org.extendj.JavaCompiler.run(JavaCompiler.java:101)
	at org.extendj.JavaCompiler.main(JavaCompiler.java:61)
	at org.jastadd.extendj.JavaCompiler.main(JavaCompiler.java:39)
 
============================================================================= 
Eclipse ECJ errors for Code4.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Super_WildCard\Code4.java (at line 13)
	addToList(stuff, "New Element"); 
	^^^^^^^^^
The method addToList(Collection<? super T>, T) in the type Code4 is not applicable for the arguments (List<capture#3-of ?>, String)
----------
1 problem (1 error)
